# aws-sg-cleanup

./: Cargo.toml  README.md
src/: alb.rs  concurrent.rs  ec2.rs  elasticache.rs  lambda.rs  main.rs  rds.rs  security.rs  utils.rs
